fixed margin error on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,13 +240,9 @@ a {
   .entry-content, .first-panel  {
     width: 97% ;
     padding: 0;
-    margin-left: auto;
-    margin-right: auto;
   }
   .second-panel, .third-panel {
   	width: 100%;
-  	margin-left: auto;
-    margin-right: auto;
 
   }
 }
